--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --no-source-maps --dist-dir dist"
   },
   "dependencies": {
     "@google/genai": "*",
@@ -18,11 +17,8 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10",
+    "typescript": "^5.0.2"
   }
 }
